fix solar tweaks and infinite timeout